Archive2/de/4c1470d9d38815/output
main.cpp: In function 'int main()':
main.cpp:7:12: error: expected unqualified-id before string constant
     extern "C" int (*p)(int);
            ^
