Archive2/de/4c1470d9d38815/main.cpp
#include <iostream>
#include <string>
#include <vector>

int main()
{
    extern "C" int (*p)(int);
}
